@@ -151,7 +151,8 @@ class NWSGOESFullDiskActivity : VideoRecordActivity(), View.OnClickListener, Too
     override fun onOptionsItemSelected(item: MenuItem): Boolean = drw.actionBarDrawerToggle.onOptionsItemSelected(item) || super.onOptionsItemSelected(item)
 
     override fun onClick(v: View) {
-        when (v.id) {R.id.iv -> UtilityToolbar.showHide(toolbar, toolbarBottom)
+        when (v.id) {
+            R.id.iv -> UtilityToolbar.showHide(toolbar, toolbarBottom)
         }
     }
 
