@@ -1,6 +1,9 @@
 
 // TODO address numerous lint msg in MyApp
 
+55034 2018_10_29 (bugfix - thanks Ely ) revert lint suggestion Oct 13 activity_settings_color_palette_editor.xml
+                 update kotlin to 1.3.0
+                 lint checks for new 1.3.0
 55033 2018_10_28 update ndk from 18 to 18b
                  make RADAR_TOOLBAR_TRANSPARENT default to true
 55032 2018_10_27 (feature in progress) add code to prevent clicking on widget ( in process )
